<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="test" />

    <TextView
        android:id="@+id/text_testing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="testing" />

</LinearLayout>
